[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/font/matchup_pro.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/lobby.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 80
font_data = ExtResource( 1 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1.78186
margin_top = 0.8909
margin_right = 1048.78
margin_bottom = 605.891
color = Color( 0.447059, 0.882353, 0.913725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -156.164
margin_top = 1.18921
margin_right = -116.164
margin_bottom = 41.1892
rect_scale = Vector2( 5.4, 3.28 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="ViewportContainer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="ViewportContainer/CenterContainer"]
margin_top = 7.0
margin_right = 68.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
text = "Lobby"

[node name="solo" type="Button" parent="."]
margin_left = 433.045
margin_top = 197.603
margin_right = 493.045
margin_bottom = 216.603
rect_scale = Vector2( 3.07507, 2.62923 )
custom_fonts/font = SubResource( 2 )
text = "Solo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="."]
margin_left = 434.156
margin_top = 311.375
margin_right = 494.156
margin_bottom = 330.375
rect_scale = Vector2( 3.08783, 2.92204 )
custom_fonts/font = SubResource( 3 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="Label" parent="host"]
margin_left = -1.80271
margin_top = -14.4312
margin_right = 121.197
margin_bottom = -0.431178
rect_scale = Vector2( 0.860384, 1.0025 )
custom_fonts/font = SubResource( 4 )
text = "IP:[PRIVATE_IP]"

[node name="join" type="Button" parent="."]
margin_left = 438.041
margin_top = 430.747
margin_right = 503.041
margin_bottom = 449.747
rect_scale = Vector2( 2.91988, 3.17447 )
custom_fonts/font = SubResource( 5 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="LineEdit" parent="join"]
margin_left = -8.53436
margin_top = 25.6419
margin_right = 118.466
margin_bottom = 48.6419
rect_scale = Vector2( 0.773585, 0.478873 )
custom_fonts/font = SubResource( 6 )
placeholder_text = "Host's IP address"
placeholder_alpha = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvalidIP" type="Label" parent="join"]
visible = false
margin_left = -17.823
margin_top = 37.2513
margin_right = 92.177
margin_bottom = 51.2513
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Invalid IP Address"

[node name="Connecting" type="ColorRect" parent="."]
visible = false
margin_left = 1.78186
margin_top = 0.8909
margin_right = 1048.78
margin_bottom = 605.891
color = Color( 0.670588, 0.447059, 0.913725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Connecting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -298.0
margin_top = -40.0
margin_right = 298.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 8 )
text = "[Connecting Text]"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="solo" to="." method="_on_solo_pressed"]
[connection signal="pressed" from="host" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="join" to="." method="_on_JoinButton_pressed"]
